Update global styles, hide scrollbar, and fix layout in Navbar component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,8 +23,6 @@ body {
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 } */
 
-
-
 :root {
   --background-light: #f5f5f5;
   --background-dark: #0a0a0a;
@@ -46,15 +44,12 @@ body {
   }
 }
 
-
-
 /* body {
   background-color: #050505;
   color: #fbfbfb;
 } */
 
 @keyframes blink {
-
   0%,
   100% {
     opacity: 0;
@@ -132,4 +127,14 @@ body {
   .skill-div-ui {
     @apply bg-[#d7d7d7] dark:bg-[#181818] rounded-lg inline-flex items-center justify-center px-3 py-2 m-1 max-[470px]:px-2 max-[470px]:py-1.5;
   }
+}
+/* Hide scrollbar for all containers */
+/* For Chrome, Safari, and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: none;
 }
